# ARMSX2

./: .gitignore  README.md
ARMSX2/: PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  settings.gradle.kts
ARMSX2/app/: build.gradle.kts
ARMSX2/app/src/main/: AndroidManifest.xml
ARMSX2/app/src/main/assets/resources/shaders/opengl/: convert.glsl  tfx_fs.glsl  tfx_vgs.glsl
ARMSX2/app/src/main/assets/resources/shaders/vulkan/: tfx.glsl
ARMSX2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
ARMSX2/app/src/main/cpp/cmake/: BuildParameters.cmake  Pcsx2Utils.cmake  SearchForStuff.cmake
ARMSX2/app/src/main/cpp/common/: Assertions.cpp  CMakeLists.txt  CrashHandler.cpp  FileSystem.cpp  FileSystem.h  HostSys.cpp
ARMSX2/app/src/main/cpp/common/Linux/: LnxHostSys.cpp  LnxMisc.cpp
ARMSX2/app/src/main/cpp/desktop/: main.cpp
ARMSX2/app/src/main/cpp/pcsx2/: BuildVersion.cpp  CMakeLists.txt  Config.h  Dmac.cpp  FPU.cpp  Gif.cpp  Gif.h  Interpreter.cpp  R3000AInterpreter.cpp  R5900.cpp  R5900OpcodeImpl.cpp  R5900OpcodeTables.cpp  VMManager.cpp  VU0.cpp  VUops.cpp  Vif.cpp  Vif_Codes.cpp  Vif_Transfer.cpp  Vif_Unpack.cpp  iRecAnalysis.h
ARMSX2/app/src/main/cpp/pcsx2/Android/: AndroidStubs.cpp
ARMSX2/app/src/main/cpp/pcsx2/DEV9/: DEV9.h  pcap_io.h
ARMSX2/app/src/main/cpp/pcsx2/GS/: GS.cpp  GSUtil.h  GSVector4_arm64.h  GSVector4i_arm64.h
ARMSX2/app/src/main/cpp/pcsx2/GS/Renderers/OpenGL/: GLContext.cpp  GLShaderCache.cpp  GSDeviceOGL.cpp  GSDeviceOGL.h
ARMSX2/app/src/main/cpp/pcsx2/GS/Renderers/SW/: GSDrawScanlineCodeGenerator.arm64.cpp  GSSetupPrimCodeGenerator.arm64.cpp
ARMSX2/app/src/main/cpp/pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  VKShaderCache.cpp  VKSwapChain.cpp
ARMSX2/app/src/main/cpp/pcsx2/Host/: AudioStream.cpp  CubebAudioStream.cpp  OboeAudioStream.cpp
ARMSX2/app/src/main/cpp/pcsx2/IPU/: IPU_MultiISA.cpp  IPUdither.cpp
ARMSX2/app/src/main/cpp/pcsx2/ImGui/: ImGuiManager.cpp  ImGuiOverlays.cpp
ARMSX2/app/src/main/cpp/pcsx2/Input/: SDLInputSource.cpp
ARMSX2/app/src/main/cpp/pcsx2/SPU2/: spu2.cpp
ARMSX2/app/src/main/cpp/pcsx2/arm64/: AsmHelpers.cpp  AsmHelpers.h  RecStubs.cpp  TraceBlocks.h  arm64Emitter.h  iDMAC_arm64.cpp  iDMAC_arm64.h  iR3000A_arm64.cpp  iR3000A_arm64.h  iR3000Atables_arm64.cpp  iR5900ALU_arm64.cpp  iR5900Branch_arm64.cpp  iR5900COP0_arm64.cpp  iR5900COP1_arm64.cpp  iR5900COP2_arm64.cpp  iR5900LoadStore_arm64.cpp  iR5900MMI_arm64.cpp  iR5900Misc_arm64.cpp  iR5900Move_arm64.cpp  iR5900MultDiv_arm64.cpp  iR5900Shift_arm64.cpp  iR5900Stubs_arm64.cpp  iR5900Trap_arm64.cpp  iR5900_arm64.cpp  iVU0Lower_arm64.cpp  iVU0Upper_arm64.cpp  iVU0micro_arm64.cpp  iVU0micro_arm64.h  iVU1Lower_arm64.cpp  iVU1Upper_arm64.cpp  iVU1micro_arm64.cpp  iVU1micro_arm64.h  intNativeOps.cpp  intNativeOps.h  recVTLB_arm64.cpp
ARMSX2/app/src/main/cpp/pcsx2/x86/: iCore.h
ARMSX2/app/src/main/cpp/tests/mvu/: run_mvu_tests.cpp
ARMSX2/app/src/main/java/com/armsx2/: Main.kt  RenderMode.kt
ARMSX2/app/src/main/java/com/armsx2/ui/: Colors.kt  ToolbarImpl.kt  WindowImpl.kt
ARMSX2/app/src/main/java/com/armsx2/ui/toolbar/: LoadGameButton.kt  PauseButton.kt  RenderModeButton.kt  StartButton.kt
ARMSX2/app/src/main/java/com/pasx2/: Main.kt
ARMSX2/app/src/main/java/com/pasx2/events/: TestResult.kt
ARMSX2/app/src/main/java/com/pasx2/ui/toolbar/: RenderModeButton.kt  TestButton.kt
ARMSX2/app/src/main/java/kr/co/iefriends/pcsx2/: MainActivity.java  NativeApp.java
pcsx2/GS/Renderers/Vulkan/: VKShaderCache.cpp
